Fixed the navbars' z-index
Fixed the Add Project's "+" sign in front of the navbar.

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ html {
     top: 0; 
     width: 100%; 
     padding-right: 18px;
+    z-index: 10;
 }
 
 .nav_list {
@@ -178,7 +179,6 @@ img {
     margin-left: 10px;
     transform: translateX(0);
     transition: transform 0.2s ease-out;
-    z-index: -1;
 }
 
 .btn:hover > i {
